<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:layout_width="match_parent"
    android:layout_height="110dp"

    android:layout_marginTop="10dp"
    android:id="@+id/gridLayout2"
    android:layout_centerHorizontal="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBox
        android:id="@+id/checkboxtextGenre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:checkMark="@android:drawable/checkbox_on_background"
        android:layout_column="0"
        android:checked="false"
        android:text="Rap"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="#d3d3d3" />

    <CheckBox
        android:id="@+id/checkboxtextGenre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_column="3"
        android:checkMark="@android:drawable/checkbox_on_background"
        android:checked="false"
        android:text="Rock"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="#d3d3d3" />



    <CheckBox
        android:id="@+id/checkboxtextGenre3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_column="2"
        android:checkMark="@android:drawable/checkbox_on_background"
        android:checked="false"
        android:text="@string/edm"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="#d3d3d3" />

    <CheckBox
        android:id="@+id/checkboxtextGenre5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:checkMark="@android:drawable/checkbox_off_background"
        android:checked="false"
        android:layout_column="1"
        android:text="@string/pop"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="#d3d3d3" />
    <!--
        <ToggleButton
            android:id="@+id/plus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_column="4"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textOff=""
            android:textOn=""
            android:background="@android:drawable/ic_menu_add"
            tools:ignore="ContentDescription" />

    -->
    <!--android:id="@+id/help_gest"-->
    <GridLayout
        android:id="@+id/help_gest"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_row="2">

        <CheckBox
            android:id="@+id/checkboxtextGenre4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="20dp"
            android:checkMark="@android:drawable/checkbox_on_background"
            android:checked="false"
            android:text="@string/popular"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#d3d3d3" />

        <CheckBox
            android:id="@+id/checkboxtextGenre6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:checkMark="@android:drawable/checkbox_on_background"
            android:checked="false"
            android:text="Funk"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#d3d3d3" />

        <CheckBox
            android:id="@+id/checkboxtextGenre7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:checkMark="@android:drawable/checkbox_on_background"
            android:checked="false"
            android:text="Hip Hop"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#d3d3d3" />

        <CheckBox
            android:id="@+id/checkboxtextGenre8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:checkMark="@android:drawable/checkbox_on_background"
            android:checked="false"
            android:text="Indie"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#d3d3d3" />

    </GridLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnSpan="5"
        android:id="@+id/help_gest2"
        >
        <CheckBox
            android:id="@+id/checkboxtextGenre9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_column="0"
            android:checkMark="@android:drawable/checkbox_on_background"
            android:checked="false"
            android:text="House"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#d3d3d3" />
        <CheckBox
            android:id="@+id/checkboxtextGenre10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_column="1"
            android:checkMark="@android:drawable/checkbox_on_background"
            android:checked="false"
            android:text="Dance"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#d3d3d3" />
        <CheckBox
            android:id="@+id/checkboxtextGenre11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_column="2"
            android:checkMark="@android:drawable/checkbox_on_background"
            android:checked="false"

            android:text="Folk"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#d3d3d3" />
        <CheckBox
            android:id="@+id/checkboxtextGenre12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_column="3"
            android:checkMark="@android:drawable/checkbox_on_background"
            android:checked="false"
            android:text="Tropical"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#d3d3d3" />

    </GridLayout>
</GridLayout>